# istar

./: .gitignore  README.md  pyproject.toml  workspace.yaml
istar/: __init__.py
istar/assets/: __init__.py
istar/assets/datasets/: fpl_datasets.py
istar/assets/fpl_data/: data_helpers.py  fpl_datasets.py  models.py  player_stats.py  training_data.py
istar/data/: features.py  make_raw_datasets.py  schemas.py
istar/data/db/: create_tables.py  table_definitions.py
istar/resources/: joblib_io_manager.py  pandas_io_manager.py
tests/: conftest.py  test_assets.py  test_data_helpers.py  test_features.py  test_player_statistics.py
tests/data/: expected_total_points_rolling_previous_5.csv  fpl_dataset_sample.csv
